--- a/index.html
+++ b/index.html
@@ -1,3 +1,43 @@
+<section class="module parallax parallax-1">
+  <div class="container">
+    <h1>ABOUT</h1>
+  </div>
+</section>
+
+<section class="module content">
+  <div class="container about">
+    <div class="imgContainer"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/125980/chamonixKitchenSmall.jpg"/></div>
+    <p class="intro">Whitecross Properties description ... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, provident, ea. Et omnis iusto, aspernatur obcaecati praesentium animi deserunt nemo fuga pariatur repudiandae eligendi maxime ad natus, consectetur odit ut. Et omnis iusto, aspernatur obcaecati praesentium animi deserunt nemo fuga pariatur repudiandae eligendi maxime ad natus, consectetur odit ut.</p>
+  </div>
+</section>
+
+<section class="module parallax parallax-2">
+  <div class="container">
+    <h1>WORK</h1>
+  </div>
+</section>
+
+<section class="module content">
+  <div class="container">
+    <h2>Lorem Ipsum Dolor</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+  </div>
+</section>
+
+<section class="module parallax parallax-3">
+  <div class="container">
+    <h1>CONTACT</h1>
+  </div>
+</section>
+
+<section class="module content contact-form">
+  <div class="container">
+    <h2>THIS WILL BE A CONTACT FORM</h2>
+  </div>
+</section>
+
+
+<!--
 <!DOCTYPE html>
 <html>
 	<head>
@@ -10,3 +50,4 @@
 		<p>hello?</p>
 	</body>
 </html>
+-->
