Setup of general formatting

--- a/index.html
+++ b/index.html
@@ -8,20 +8,21 @@
 	<body>
 		<section class="module parallax parallax-1">
 		  <div class="container">
-		    <h1>ABOUT</h1>
+		    <h1>JOHANNA SMITH-PALLISER</h1>
 		  </div>
 		</section>
 
 		<section class="module content">
 		  <div class="container about">
-		    <div class="imgContainer"><img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/125980/chamonixKitchenSmall.jpg"/></div>
+				<h2>Lorem Ipsum Dolor</h2>
+		    <div class="imgContainer"></div>
 		    <p class="intro">Whitecross Properties description ... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, provident, ea. Et omnis iusto, aspernatur obcaecati praesentium animi deserunt nemo fuga pariatur repudiandae eligendi maxime ad natus, consectetur odit ut. Et omnis iusto, aspernatur obcaecati praesentium animi deserunt nemo fuga pariatur repudiandae eligendi maxime ad natus, consectetur odit ut.</p>
 		  </div>
 		</section>
 
 		<section class="module parallax parallax-2">
 		  <div class="container">
-		    <h1>WORK</h1>
+		    <h1>PROJECTS</h1>
 		  </div>
 		</section>
 
@@ -34,7 +35,7 @@
 
 		<section class="module parallax parallax-3">
 		  <div class="container">
-		    <h1>CONTACT</h1>
+		    <h1>PROFESSIONAL EXPERIENCE</h1>
 		  </div>
 		</section>
 
