Set up full layout

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 	<head>
 		<title>hi.</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
-	</head>
+		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+		<link rel="stylesheet" href="css/ionicons.css">
+ 	</head>
 
 	<body>
 		<section class="module parallax parallax-1">
@@ -13,10 +15,26 @@
 		</section>
 
 		<section class="module content">
-		  <div class="container about">
-				<h2>Lorem Ipsum Dolor</h2>
-		    <div class="imgContainer"></div>
-		    <p class="intro">Whitecross Properties description ... Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam, provident, ea. Et omnis iusto, aspernatur obcaecati praesentium animi deserunt nemo fuga pariatur repudiandae eligendi maxime ad natus, consectetur odit ut. Et omnis iusto, aspernatur obcaecati praesentium animi deserunt nemo fuga pariatur repudiandae eligendi maxime ad natus, consectetur odit ut.</p>
+			<div class="container about">
+				<section class="about vertical-center">
+					<div class="container">
+						<div class="row">
+							<div class="col-md-3 col-md-offset-2 pic-col">
+								<img src="assets/johanna.jpg" class="img-circle img-center">
+							</div>
+							<div class="col-md-4 col-md-offset-1">
+								<h2>Hello!</h2>
+								<p class="intro">I'm Johanna, and I want to revolutionize the way we interact with technology on a daily basis. I'm currently a junior at Cornell University majoring in Computer Science. My interests include Software Engineering, Mobile Development, and Brilliant User Experience.</p>
+								<ul class="list-inline text-center">
+									<li><a href="mailto:jls628@cornell.edu?Subject=Hi%20there!"><i class="icon ion-ios-email social-icons"></i></a></li>
+      						<li><a href="https://www.linkedin.com/in/johannasp/" target="_blank"><i class="icon ion-social-linkedin social-icons"></i></a></li>
+      						<li><a href="/assets/resume.pdf" target="_blank"><i class="icon ion-document-text social-icons"></i></a></li>
+      						<li><a href="https://github.com/johannasp" target="_blank"><i class="icon ion-social-github social-icons"></i></a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+				</section>
 		  </div>
 		</section>
 
@@ -39,6 +57,19 @@
 		  </div>
 		</section>
 
+		<section class="module content">
+		  <div class="container">
+		    <h2>Lorem Ipsum Dolor</h2>
+		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+		  </div>
+		</section>
+
+		<section class="module parallax parallax-4">
+		  <div class="container">
+		    <h1>LEADERSHIP</h1>
+		  </div>
+		</section>
+
 		<section class="module content contact-form">
 		  <div class="container">
 		    <h2>THIS WILL BE A CONTACT FORM</h2>
@@ -46,19 +77,3 @@
 		</section>
 	</body>
 </html>
-
-
-<!--
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>hi.</title>
-	</head>
-
-	<body>
-		<h2>surprise!</h2>
-		<p>it works!!</p>
-		<p>hello?</p>
-	</body>
-</html>
--->
