Added project icons

--- a/index.html
+++ b/index.html
@@ -46,8 +46,29 @@
 
 		<section class="module content">
 		  <div class="container">
-		    <h2>Lorem Ipsum Dolor</h2>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+		    <div class="row">
+					<div class="col-sm-4 pic-col">
+						<img src="assets/adoptme.png" class="img-circle img-center">
+						<div class="work-description">
+							<h3>Adopt.Me</h3>
+							project description
+						</div>
+					</div>
+					<div class="col-sm-4 pic-col">
+						<img src="assets/basket.png" class="img-circle img-center">
+						<div class="work-description">
+							<h3>SmarkBasket</h3>
+							project description
+						</div>
+					</div>
+					<div class="col-sm-4 pic-col">
+						<img src="assets/socks.png" class="img-circle img-center">
+						<div class="work-description">
+							<h3>Knock Knock</h3>
+							project description
+						</div>
+					</div>
+				</div>
 		  </div>
 		</section>
 
