always with the typos lol

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					<div class="col-sm-4 pic-col">
 						<img src="assets/basket.png" class="img-circle img-center">
 						<div class="work-description">
-							<h3>SmarkBasket</h3>
+							<h3>SmartBasket</h3>
 							project description
 						</div>
 					</div>
