Added work experience layout

--- a/index.html
+++ b/index.html
@@ -49,21 +49,21 @@
 		    <div class="row">
 					<div class="col-sm-4 pic-col">
 						<img src="assets/adoptme.png" class="img-circle img-center">
-						<div class="work-description">
+						<div class="project-description">
 							<h3>Adopt.Me</h3>
 							project description
 						</div>
 					</div>
 					<div class="col-sm-4 pic-col">
 						<img src="assets/basket.png" class="img-circle img-center">
-						<div class="work-description">
+						<div class="project-description">
 							<h3>SmartBasket</h3>
 							project description
 						</div>
 					</div>
 					<div class="col-sm-4 pic-col">
 						<img src="assets/socks.png" class="img-circle img-center">
-						<div class="work-description">
+						<div class="project-description">
 							<h3>Knock Knock</h3>
 							project description
 						</div>
@@ -79,9 +79,65 @@
 		</section>
 
 		<section class="module content">
-		  <div class="container">
-		    <h2>Lorem Ipsum Dolor</h2>
-		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit...</p>
+			<div class="container about">
+				<section class="about">
+					<div class="container">
+						<!-- GE -->
+						<div class="row">
+							<div class="col-md-3 col-md-offset-1 pic-col">
+								<img src="assets/ge.png" class="company-img-circle img-center">
+							</div>
+							<div class="col-md-6 job-description">
+								<h3>GE Aviation</h3>
+								<h4>Digital Technology Leadership Program Intern | Cincinnati, OH | Summer 2017</h4>
+								<p>this will be descriptive text about GE job</p>
+								<ul class="list-unstyled">
+									<li>list item</li>
+									<li>list item</li>
+									<li>list item</li>
+									<li>list item</li>
+								</ul>
+							</div>
+						</div>
+
+						<!-- CodeKids -->
+						<div class="row">
+							<div class="col-md-3 col-md-offset-1 pic-col">
+								<img src="assets/codekids.png" class="company-img-circle img-center">
+							</div>
+							<div class="col-md-6 job-description">
+								<h3>CodeKids Camp</h3>
+								<h4>Junior Instructor | Miami, FL | Summer 2016</h4>
+								<p>this will be descriptive text about codekids job</p>
+								<ul class="list-unstyled">
+									<li>list item</li>
+									<li>list item</li>
+									<li>list item</li>
+									<li>list item</li>
+								</ul>
+							</div>
+						</div>
+
+						<!-- CATALYST -->
+						<div class="row">
+							<div class="col-md-3 col-md-offset-1 pic-col">
+								<img src="assets/catalyst.png" class="company-img-circle img-center">
+							</div>
+							<div class="col-md-6 job-description">
+								<h3>Cornell Engineering CATALYST Academy</h3>
+								<h4>Program Assistant | Ithaca, NY | Summer 2016</h4>
+								<p>this will be descriptive text about CATALYST job</p>
+								<ul class="list-unstyled">
+									<li>list item</li>
+									<li>list item</li>
+									<li>list item</li>
+									<li>list item</li>
+								</ul>
+							</div>
+						</div>
+
+					</div>
+				</section>
 		  </div>
 		</section>
 
