--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 		<section class="module content">
 		  <div class="container">
 		    <div class="row">
-					<div class="col-sm-4 pic-col">
+					<div class="col-sm-4">
 						<img src="assets/adoptme.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>Adopt.Me</h3>
 							project description
 						</div>
 					</div>
-					<div class="col-sm-4 pic-col">
+					<div class="col-sm-4">
 						<img src="assets/basket.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>SmartBasket</h3>
 							project description
 						</div>
 					</div>
-					<div class="col-sm-4 pic-col">
+					<div class="col-sm-4">
 						<img src="assets/socks.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>Knock Knock</h3>
@@ -146,6 +146,8 @@
 		    <h1>LEADERSHIP</h1>
 		  </div>
 		</section>
+
+
 
 		<section class="module content contact-form">
 		  <div class="container">
