Jk maybe this works now

--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
 		<section class="module content">
 		  <div class="container">
 		    <div class="row">
-					<div class="col-sm-4">
+					<div class="col-sm-3 col-md-offset-1">
 						<img src="assets/adoptme.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>Adopt.Me</h3>
 							project description
 						</div>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-3 col-md-offset-1">
 						<img src="assets/basket.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>SmartBasket</h3>
 							project description
 						</div>
 					</div>
-					<div class="col-sm-4">
+					<div class="col-sm-3 col-md-offset-1">
 						<img src="assets/socks.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>Knock Knock</h3>
