(Most) content added

--- a/index.html
+++ b/index.html
@@ -47,25 +47,25 @@
 		<section class="module content">
 		  <div class="container">
 		    <div class="row">
-					<div class="col-sm-3 col-md-offset-1">
-						<img src="assets/adoptme.png" class="img-circle img-center">
-						<div class="project-description">
-							<h3>Adopt.Me</h3>
-							project description
-						</div>
-					</div>
-					<div class="col-sm-3 col-md-offset-1">
+					<div class="col-sm-4">
 						<img src="assets/basket.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>SmartBasket</h3>
-							project description
+							Created at Walmart's Brick & Code 2.0 Hackathon, this iOS application allows shoppers to participate in "shop sharing," an opportunity to combine multiple users' orders and save money.
 						</div>
 					</div>
-					<div class="col-sm-3 col-md-offset-1">
+					<div class="col-sm-4">
+						<img src="assets/adoptme.png" class="img-circle img-center">
+						<div class="project-description">
+							<h3>Adopt.Me</h3>
+							It's Tinder, but for dogs! This iOS application utilizes the popular Tinder interface to connect those looking to adopt a pet with dogs & cats at their local shelters. Swiping right on an animal allows you to show interest, providing you with additional pet info and an opportunity to contact the shelter.
+						</div>
+					</div>
+					<div class="col-sm-4">
 						<img src="assets/socks.png" class="img-circle img-center">
 						<div class="project-description">
 							<h3>Knock Knock</h3>
-							project description
+							Dorm life can be awkward, especially when it comes to privacy. Knock Knock lets you ask your roommate(s) for some private time with a quick tap on your phone, avoiding awkward conversations and giving you the space you need. Privacy options include sleep, study, and me time.
 						</div>
 					</div>
 				</div>
@@ -78,24 +78,19 @@
 		  </div>
 		</section>
 
-		<section class="module content">
-			<div class="container about">
-				<section class="about">
-					<div class="container">
+		<section class=" content">
+			<div class="container job-description">
 						<!-- GE -->
 						<div class="row">
 							<div class="col-md-3 col-md-offset-1 pic-col">
 								<img src="assets/ge.png" class="company-img-circle img-center">
 							</div>
-							<div class="col-md-6 job-description">
+							<div class="col-md-6">
 								<h3>GE Aviation</h3>
 								<h4>Digital Technology Leadership Program Intern | Cincinnati, OH | Summer 2017</h4>
-								<p>this will be descriptive text about GE job</p>
+								<p></p>
 								<ul class="list-unstyled">
-									<li>list item</li>
-									<li>list item</li>
-									<li>list item</li>
-									<li>list item</li>
+									<li></li>
 								</ul>
 							</div>
 						</div>
@@ -105,16 +100,10 @@
 							<div class="col-md-3 col-md-offset-1 pic-col">
 								<img src="assets/codekids.png" class="company-img-circle img-center">
 							</div>
-							<div class="col-md-6 job-description">
+							<div class="col-md-6">
 								<h3>CodeKids Camp</h3>
 								<h4>Junior Instructor | Miami, FL | Summer 2016</h4>
-								<p>this will be descriptive text about codekids job</p>
-								<ul class="list-unstyled">
-									<li>list item</li>
-									<li>list item</li>
-									<li>list item</li>
-									<li>list item</li>
-								</ul>
+								<p>At CodeKids, I worked as Junior Instructor to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver quantifiable, <b>demonstrable</b> projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
 							</div>
 						</div>
 
@@ -123,21 +112,13 @@
 							<div class="col-md-3 col-md-offset-1 pic-col">
 								<img src="assets/catalyst.png" class="company-img-circle img-center">
 							</div>
-							<div class="col-md-6 job-description">
+							<div class="col-md-6">
 								<h3>Cornell Engineering CATALYST Academy</h3>
 								<h4>Program Assistant | Ithaca, NY | Summer 2016</h4>
-								<p>this will be descriptive text about CATALYST job</p>
-								<ul class="list-unstyled">
-									<li>list item</li>
-									<li>list item</li>
-									<li>list item</li>
-									<li>list item</li>
-								</ul>
+								<p>At Cornell's CATALYST Academy, I utilized my position as Program Assistant to create a unique introductory STEM experience for high schoolers. Through on-campus experiences at Cornell's Engineering department, I introduced students to the various opportunties available throughout the numerous fields of engineering. By the end of the program, students were able to complete a full <b>rotation/walkthrough</b> of the engineering design process, from _____ to _____, through a robotics project with Professor David Schneider. </p>
 							</div>
 						</div>
 
-					</div>
-				</section>
 		  </div>
 		</section>
 
@@ -147,11 +128,44 @@
 		  </div>
 		</section>
 
-
-
-		<section class="module content contact-form">
+		<section class="module content">
 		  <div class="container">
-		    <h2>THIS WILL BE A CONTACT FORM</h2>
+		    <div class="row">
+					<div class="col-sm-3 no-padding">
+						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<div class="leadership">
+							<h3>BigRed//Hacks</h3>
+							Sponsorship Team
+						</div>
+					</div>
+					<div class="col-sm-3 no-padding">
+						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<div class="leadership">
+							<h3>ACSU</h3>
+							Social Team Officer
+						</div>
+					</div>
+					<div class="col-sm-3 no-padding">
+						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<div class="leadership">
+							<h3>URMC</h3>
+							um
+						</div>
+					</div>
+					<div class="col-sm-3 no-padding">
+						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<div class="leadership">
+							<h3>CUEmpower</h3>
+							Mentor
+						</div>
+					</div>
+				</div>
+		  </div>
+		</section>
+
+		<section class="module content">
+		  <div class="container resume">
+		    <a href="assets/resume.pdf">Resume</a>
 		  </div>
 		</section>
 	</body>
