Small content updates

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<div class="col-md-6">
 								<h3>CodeKids Camp</h3>
 								<h4>Junior Instructor | Miami, FL | Summer 2016</h4>
-								<p>At CodeKids, I worked as Junior Instructor to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver quantifiable, <b>demonstrable</b> projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
+								<p>At CodeKids, I worked as Junior Instructor to teach local students ages 7 through 13 the fundamental concepts of programming and robotics. While external resources like Codecademy and Lego Mindstorms were used to allow students to deliver actual quantifiable projects, I presented concepts through face-to-face interactions with students each morning, making sure to include hands-on activites that would solidify the concepts independently from any specific syntax.</p>
 							</div>
 						</div>
 
@@ -115,7 +115,7 @@
 							<div class="col-md-6">
 								<h3>Cornell Engineering CATALYST Academy</h3>
 								<h4>Program Assistant | Ithaca, NY | Summer 2016</h4>
-								<p>At Cornell's CATALYST Academy, I utilized my position as Program Assistant to create a unique introductory STEM experience for high schoolers. Through on-campus experiences at Cornell's Engineering department, I introduced students to the various opportunties available throughout the numerous fields of engineering. By the end of the program, students were able to complete a full <b>rotation/walkthrough</b> of the engineering design process, from _____ to _____, through a robotics project with Professor David Schneider. </p>
+								<p>At Cornell's CATALYST Academy, I utilized my position as Program Assistant to create a unique introductory STEM experience for high schoolers. Through on-campus experiences at Cornell's Engineering department, I introduced students to the various opportunties available throughout the numerous fields of engineering. By the end of the program, students were able to complete a full implementation of the engineering design process, from defining the problem to communicating results, through a robotics project with Professor David Schneider. </p>
 							</div>
 						</div>
 
@@ -128,31 +128,24 @@
 		  </div>
 		</section>
 
-		<section class="module content">
+		<section class="module content center">
 		  <div class="container">
 		    <div class="row">
-					<div class="col-sm-3 no-padding">
+					<div class="col-sm-4 no-padding">
 						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
 						<div class="leadership">
 							<h3>BigRed//Hacks</h3>
 							Sponsorship Team
 						</div>
 					</div>
-					<div class="col-sm-3 no-padding">
+					<div class="col-sm-4 no-padding">
 						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
 						<div class="leadership">
 							<h3>ACSU</h3>
 							Social Team Officer
 						</div>
 					</div>
-					<div class="col-sm-3 no-padding">
-						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
-						<div class="leadership">
-							<h3>URMC</h3>
-							um
-						</div>
-					</div>
-					<div class="col-sm-3 no-padding">
+					<div class="col-sm-4 no-padding">
 						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
 						<div class="leadership">
 							<h3>CUEmpower</h3>
