Resume opens in new page

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
 		<section class="module content">
 		  <div class="container resume">
-		    <a href="assets/resume.pdf">Resume</a>
+		    <a href="assets/resume.pdf" target="_blank">Resume</a>
 		  </div>
 		</section>
 	</body>
