--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<ul class="list-inline text-center">
 									<li><a href="mailto:jls628@cornell.edu?Subject=Hi%20there!"><i class="icon ion-ios-email social-icons"></i></a></li>
       						<li><a href="https://www.linkedin.com/in/johannasp/" target="_blank"><i class="icon ion-social-linkedin social-icons"></i></a></li>
-      						<li><a href="/assets/resume.pdf" target="_blank"><i class="icon ion-document-text social-icons"></i></a></li>
+      						<li><a href="./assets/resume.pdf" target="_blank"><i class="icon ion-document-text social-icons"></i></a></li>
       						<li><a href="https://github.com/johannasp" target="_blank"><i class="icon ion-social-github social-icons"></i></a></li>
 								</ul>
 							</div>
@@ -132,21 +132,21 @@
 		  <div class="container">
 		    <div class="row">
 					<div class="col-sm-4 no-padding">
-						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<img src="assets/brh.jpg" class="img-leadership img-responsive">
 						<div class="leadership">
 							<h3>BigRed//Hacks</h3>
 							Sponsorship Team
 						</div>
 					</div>
 					<div class="col-sm-4 no-padding">
-						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<img src="assets/gates.jpg" class="img-leadership img-responsive">
 						<div class="leadership">
 							<h3>ACSU</h3>
 							Social Team Officer
 						</div>
 					</div>
 					<div class="col-sm-4 no-padding">
-						<img src="assets/corgi.jpg" class="img-leadership img-responsive">
+						<img src="assets/duff.jpg" class="img-leadership img-responsive">
 						<div class="leadership">
 							<h3>CUEmpower</h3>
 							Mentor
