Redirect to resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
 <html>
   <h1>hello!</h1>
+  <meta http-equiv="refresh" content="0; URL='http://johannasp.com/assets/resume.pdf'" />
 </html>
