Update links to resume on site

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 								<ul class="list-inline text-center">
 									<li><a href="mailto:jls628@cornell.edu?Subject=Hi%20there!"><i class="icon ion-ios-email social-icons"></i></a></li>
       						<li><a href="https://www.linkedin.com/in/johannasp/" target="_blank"><i class="icon ion-social-linkedin social-icons"></i></a></li>
-      						<li><a href="./assets/resume.pdf" target="_blank"><i class="icon ion-document-text social-icons"></i></a></li>
+      						<li><a href="./resume.pdf" target="_blank"><i class="icon ion-document-text social-icons"></i></a></li>
       						<li><a href="https://github.com/johannasp" target="_blank"><i class="icon ion-social-github social-icons"></i></a></li>
 								</ul>
 							</div>
@@ -158,7 +158,7 @@
 
 		<section class="module content">
 		  <div class="container resume">
-		    <a href="assets/resume.pdf" target="_blank">Resume</a>
+		    <a href="/resume" target="_blank">Resume</a>
 		  </div>
 		</section>
 	</body>
