Added alt text, metadata

--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>hi.</title>
+		<title>Hey there!</title>
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/ionicons.css">
+
+		<meta charset="UTF-8">
+		<meta property="og:url" content="https://johannasp.com/">
+		<meta property="og:title" content="Johanna Smith-Palliser">
+		<meta property="og:type" content="website">
+		<meta property="og:description" content="Developer, mentor, and teacher. Computer science student at Cornell University.">
+		<meta property="og:image" content="http://johannasp.com/assets/johanna.jpg">
  	</head>
 
 	<body>
@@ -20,7 +27,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="col-md-3 col-md-offset-2 pic-col">
-								<img src="assets/johanna.jpg" class="img-circle img-center">
+								<img src="assets/johanna.jpg" class="img-circle img-center" alt="Picture of Johanna Smith-Palliser">
 							</div>
 							<div class="col-md-4 col-md-offset-1">
 								<h2>Hello!</h2>
@@ -48,21 +55,21 @@
 		  <div class="container">
 		    <div class="row">
 					<div class="col-sm-4">
-						<img src="assets/basket.png" class="img-circle img-center">
+						<img src="assets/basket.png" class="img-circle img-center" alt="Icon for Basket project">
 						<div class="project-description">
 							<h3>SmartBasket</h3>
 							Created at Walmart's Brick & Code 2.0 Hackathon, this iOS application allows shoppers to participate in "shop sharing," an opportunity to combine multiple users' orders and save money.
 						</div>
 					</div>
 					<div class="col-sm-4">
-						<img src="assets/adoptme.png" class="img-circle img-center">
+						<img src="assets/adoptme.png" class="img-circle img-center" alt="Icon for Adopt.Me project">
 						<div class="project-description">
 							<h3>Adopt.Me</h3>
 							It's Tinder, but for dogs! This iOS application utilizes the popular Tinder interface to connect those looking to adopt a pet with dogs & cats at their local shelters. Swiping right on an animal allows you to show interest, providing you with additional pet info and an opportunity to contact the shelter.
 						</div>
 					</div>
 					<div class="col-sm-4">
-						<img src="assets/socks.png" class="img-circle img-center">
+						<img src="assets/socks.png" class="img-circle img-center" alt="Icon for Knock Knock project">
 						<div class="project-description">
 							<h3>Knock Knock</h3>
 							Dorm life can be awkward, especially when it comes to privacy. Knock Knock lets you ask your roommate(s) for some private time with a quick tap on your phone, avoiding awkward conversations and giving you the space you need. Privacy options include sleep, study, and me time.
@@ -83,7 +90,7 @@
 						<!-- GE -->
 						<div class="row">
 							<div class="col-md-3 col-md-offset-1 pic-col">
-								<img src="assets/ge.png" class="company-img-circle img-center">
+								<img src="assets/ge.png" class="company-img-circle img-center" alt="GE logo">
 							</div>
 							<div class="col-md-6">
 								<h3>GE Aviation</h3>
@@ -98,7 +105,7 @@
 						<!-- CodeKids -->
 						<div class="row">
 							<div class="col-md-3 col-md-offset-1 pic-col">
-								<img src="assets/codekids.png" class="company-img-circle img-center">
+								<img src="assets/codekids.png" class="company-img-circle img-center" alt="CodeKids logo">
 							</div>
 							<div class="col-md-6">
 								<h3>CodeKids Camp</h3>
@@ -110,7 +117,7 @@
 						<!-- CATALYST -->
 						<div class="row">
 							<div class="col-md-3 col-md-offset-1 pic-col">
-								<img src="assets/catalyst.png" class="company-img-circle img-center">
+								<img src="assets/catalyst.png" class="company-img-circle img-center" alt="CATALYST logo">
 							</div>
 							<div class="col-md-6">
 								<h3>Cornell Engineering CATALYST Academy</h3>
@@ -132,21 +139,21 @@
 		  <div class="container">
 		    <div class="row">
 					<div class="col-sm-4 no-padding">
-						<img src="assets/brh.jpg" class="img-leadership img-responsive">
+						<img src="assets/brh.jpg" class="img-leadership img-responsive" alt="BigRed\\Hacks logo">
 						<div class="leadership">
 							<h3>BigRed//Hacks</h3>
 							Sponsorship Team
 						</div>
 					</div>
 					<div class="col-sm-4 no-padding">
-						<img src="assets/gates.jpg" class="img-leadership img-responsive">
+						<img src="assets/gates.jpg" class="img-leadership img-responsive" alt="Gates Hall">
 						<div class="leadership">
 							<h3>ACSU</h3>
 							Social Team Officer
 						</div>
 					</div>
 					<div class="col-sm-4 no-padding">
-						<img src="assets/duff.jpg" class="img-leadership img-responsive">
+						<img src="assets/duff.jpg" class="img-leadership img-responsive" alt="Picture of students at Duffield Hall">
 						<div class="leadership">
 							<h3>CUEmpower</h3>
 							Mentor
