--- a/index.html
+++ b/index.html
@@ -12,6 +12,16 @@
 		<meta property="og:type" content="website">
 		<meta property="og:description" content="Developer, mentor, and teacher. Computer science student at Cornell University.">
 		<meta property="og:image" content="http://johannasp.com/assets/johanna.jpg">
+
+		<script>
+  		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  		ga('create', 'UA-105586258-1', 'auto');
+  		ga('send', 'pageview');
+		</script>
  	</head>
 
 	<body>
